# sputnikvm

./: .gitignore  .travis.yml  Cargo.toml  README.md
bigint/: Cargo.toml
cli/: Cargo.toml
cli/res/: config_example.json
gethrpc/: Cargo.toml
jsontests/: Cargo.toml
jsontests/benches/: performance.rs
jsontests/jsontests-derive/: Cargo.toml
jsontests/jsontests-derive/src/: lib.rs
jsontests/jsontests-derive/test_crate/: Cargo.toml
jsontests/jsontests-derive/test_crate/src/: main.rs
jsontests/res/VMTests/vmArithmeticTest/: sdiv_dejavu.json
jsontests/res/files/: vmSystemOperationsTest.json
jsontests/src/: blockchain.rs  lib.rs  util.rs
jsontests/tests/: arithmetic.rs  bitwise.rs  blockinfo.rs  constantinople.rs  eiptests.rs  environment.rs  flow.rs  harness.rs  inputlimits.rs  inputlimitslight.rs  log.rs  performance.rs  pushdupswap.rs  random.rs  sha3.rs  system.rs  vm.rs  vmtests.rs
network/classic/: Cargo.toml
network/classic/src/: lib.rs
network/ellaism/: Cargo.toml
network/ellaism/src/: lib.rs
network/expanse/: Cargo.toml
network/expanse/src/: lib.rs
network/foundation/: Cargo.toml
network/foundation/src/: lib.rs
network/musicoin/: Cargo.toml
network/musicoin/src/: lib.rs
network/ubiq/: Cargo.toml
network/ubiq/src/: lib.rs
precompiled/bn128/: Cargo.toml
precompiled/bn128/src/: lib.rs
precompiled/modexp/: Cargo.toml
precompiled/modexp/src/: lib.rs
regtests/: Cargo.toml
sputnikvm/: Cargo.toml
sputnikvm/src/vm/: patch.rs
src/: lib.rs  transaction.rs
src/commit/: account.rs
src/eval/: cost.rs  lifecycle.rs  mod.rs
src/evmjit/: mod.rs
src/evmjit/compiler/: evmconstants.rs  evmtypes.rs  mod.rs
src/evmjit/compiler/memory/: mem_representation.rs  mod.rs
src/evmjit/compiler/runtime/: env.rs  mod.rs  rt_data_type.rs  rt_type.rs  stack_init.rs  txctx.rs
src/evmjit/compiler/stack/: mod.rs
src/patch/: mod.rs
stateful/: Cargo.toml
stateful/examples/: parallel.rs
stateful/src/: lib.rs
stateful/tests/: genesis.rs
