[package]
name = "sputnikvm-cli"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "SputnikVM CLI"
repository = "https://github.com/ETCDEVTeam/sputnikvm"

# Since we have an explicit [[bin]] section below, we add the
# following "autobins" line to prevent Cargo from automatically
# inferring binary targets, only main.rs will be used. Should we move
# src/bin/profile.rs somewhere else?
#
# In the Rust 2018 edition this will be necessary.  See
# https://github.com/rust-lang/cargo/issues/5330
autobins = false

[[bin]]
name = "sputnikvm-cli"
path = "src/bin/main.rs"

[dependencies]
etcommon-bigint = "0.2"
etcommon-hexutil = "0.2"
sputnikvm = { path = ".." }
sputnikvm-network-classic = { path = "../network/classic" }
gethrpc = { path = '../gethrpc' }
clap = "2.22"
serde_json = "1.0"
flame = "0.2"
