[package]
name = "jsontests"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]

[[bench]]
name = "performance"
harness = false

[dependencies]
sputnikvm = { path = '..' }
jsontests-derive = { path = "./jsontests-derive" }
etcommon-bigint = "0.2"
etcommon-hexutil = "0.2"
serde_json = "1.0"
lazy_static = "0.2"
env_logger = "0.5.11"
sha3 = "0.6"
etcommon-rlp = { version = "0.2", default-features = false }
criterion = "0.2.5"

[features]
default = []
bench = []

[target.'cfg(unix)'.dependencies]
gag = "0.1.10"
