[package]
name = "sputnikvm-network-classic"
version = "0.11.0-beta.0"
description = "Ethereum Classic patches for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ETCDEVTeam/sputnikvm"

[dependencies]
sputnikvm = { version = "0.11.0-beta", path = "../..", default-features = false }
sputnikvm-precompiled-bn128 = { version = "0.11.0-beta", path = "../../precompiled/bn128", default-features = false}
sputnikvm-precompiled-modexp = { version = "0.11.0-beta", path = "../../precompiled/modexp", default-features = false }
etcommon-bigint = { version = "0.2", default-features = false }

[features]
default = ["std", "c-secp256k1"]
rlp = ["etcommon-bigint/rlp"]
c-secp256k1 = ["sputnikvm/c-secp256k1", "sputnikvm-precompiled-bn128/c-secp256k1", "sputnikvm-precompiled-modexp/c-secp256k1"]
rust-secp256k1 = ["sputnikvm/rust-secp256k1", "sputnikvm-precompiled-bn128/rust-secp256k1", "sputnikvm-precompiled-modexp/rust-secp256k1"]
std = ["sputnikvm/std"]
