[package]
name = "sputnikvm-network-foundation"
version = "0.10.0"
description = "Ethereum patches for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ethereumproject/sputnikvm"

[dependencies]
sputnikvm = { version = "0.10", path = "../.." }
sputnikvm-precompiled-bn128 = { version = "0.10", path = "../../precompiled/bn128" }
sputnikvm-precompiled-modexp = { version = "0.10", path = "../../precompiled/modexp" }
etcommon-bigint = { version = "0.2", default-features = false }