[package]
name = "sputnikvm-precompiled-bn128"
version = "0.10.1"
description = "bn128 precompiled contracts for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ETCDEVTeam/sputnikvm"

[dependencies]
sputnikvm = { version = "0.10", path = "../..", default-features = false }
etcommon-bigint = { version = "0.2", default-features = false }
bn = { version = "0.4", git = "https://github.com/ETC-Labs/bn.git", branch = "master", default-features = false }

[features]
default = ["std", "c-secp256k1"]
rlp = ["etcommon-bigint/rlp"]
c-secp256k1 = ["sputnikvm/c-secp256k1"]
rust-secp256k1 = ["sputnikvm/rust-secp256k1"]
std = ["sputnikvm/std", "bn/std"]
