[package]
name = "sputnikvm-precompiled-modexp"
version = "0.10.1"
description = "modexp precompiled contracts for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ethereumproject/sputnikvm"

[dependencies]
sputnikvm = { version = "0.10", path = "../..", default-features = false }
etcommon-bigint = { version = "0.2", default-features = false }
num-bigint = "0.1"

[dev-dependencies]
etcommon-hexutil = "0.2"

[features]
default = ["std", "c-secp256k1"]
rlp = ["etcommon-bigint/rlp"]
c-secp256k1 = ["sputnikvm/c-secp256k1"]
rust-secp256k1 = ["sputnikvm/rust-secp256k1"]
std = ["sputnikvm/std"]
